cargo-features = ["edition2021"]
[package]
name = "mpl-token-metadata"
version = "1.2.5"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "~0.3"
arrayref = "~0.3.6"
num-traits = "~0.2"
solana-program = "1.10.3"
mpl-token-vault = { path="../../token-vault/program", features = [ "no-entrypoint" ] }
spl-token = { git = "https://github.com/shravanshetty1/solana-program-library", branch="ata-1.0.3", features = [ "no-entrypoint" ] }
spl-associated-token-account = { git = "https://github.com/shravanshetty1/solana-program-library", branch="ata-1.0.3", features = [ "no-entrypoint" ] }
thiserror = "~1.0"
borsh = "~0.9.2"

[dev-dependencies]
solana-sdk = "1.10.3"
solana-program-test = "1.10.3"

[lib]
crate-type = ["cdylib", "lib"]
